--- a/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
+++ b/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
@@ -19,7 +19,7 @@
 		@Scripts.Render("~/main-js")
 		<script> getHints("@Model.CourseId", "@Model.SlideIndex", '@Model.ExerciseBlock.HintsMd.Count') </script>
 		ExerciseBlockData data = Model.Context.GetBlockData(Model.ExerciseBlock);
-		<script> refreshPreviousDraft('@(data.LatestAcceptedSolution != null)', '@Model.SlideId') </script>
+		<script> refreshPreviousDraft('@(data.Solution != null)', '@Model.SlideId') </script>
 	}
 </body>
 
