--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -63,8 +63,8 @@
 		if (Model.ManualQuizCheckQueueItem != null)
 		{
 			@Html.Hidden("id", Model.ManualQuizCheckQueueItem.Id)
-			@Html.Hidden("errorUrl", Url.RouteUrl("Course.SlideById", new { courseId = Model.CourseId, slideId = Model.Slide.Url, CheckQueueItemId = Model.ManualQuizCheckQueueItem.Id }) + "&error=")
-			@Html.Hidden("nextUrl", Url.Action("ManualQuizCheckingQueue", "Admin", new { courseId = Model.CourseId }))
+			@Html.Hidden("errorUrl", Url.RouteUrl("Course.SlideById", new { courseId = Model.CourseId, slideId = Model.Slide.Url, CheckQueueItemId = Model.ManualQuizCheckQueueItem.Id, Model.GroupId }) + "&error=")
+			@Html.Hidden("nextUrl", Url.Action("ManualQuizCheckingQueue", "Admin", new { courseId = Model.CourseId, Model.GroupId }))
 		}
 		@SlideHtml.Blocks(context)
 	}
@@ -84,7 +84,7 @@
 			{
 				<input type="submit" class="btn btn-default" form="quiz__score-form" value="Сохранить и вернуться">
 				<input type="submit" class="btn btn-primary" form="quiz__score-form" value="Сохранить и перейти к следующему"
-				       data-url="@Url.Action("CheckNextQuizForSlide", "Admin", new { courseId = Model.CourseId, slideId = Model.Slide.Id })"
+				       data-url="@Url.Action("CheckNextQuizForSlide", "Admin", new { courseId = Model.CourseId, slideId = Model.Slide.Id, Model.GroupId })"
 					   onclick="$('[name=nextUrl]').val($(this).data('url'))">
 			}
 			else if (Model.QuizState == QuizState.Subtotal)
