--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -66,7 +66,7 @@
 			@Html.Hidden("errorUrl", Url.RouteUrl("Course.SlideById", new { courseId = Model.CourseId, slideId = Model.Slide.Url, CheckQueueItemId = Model.ManualQuizCheckQueueItem.Id, Model.GroupId }) + "&error=")
 			@Html.Hidden("nextUrl", Url.Action("ManualQuizCheckingQueue", "Admin", new { courseId = Model.CourseId, Model.GroupId }))
 		}
-		@SlideHtml.Blocks(context)
+		@SlideHtml.Blocks(context, Html)
 	}
 
 	if (!Model.IsGuest)
