--- a/src/uLearn.Web/Views/Admin/_ManualCheckingQueueFilterForm.cshtml
+++ b/src/uLearn.Web/Views/Admin/_ManualCheckingQueueFilterForm.cshtml
@@ -9,8 +9,8 @@
 		@{
 			var groupsListItems = new List<SelectListItem>
 			{
-				new SelectListItem { Text = "Все пользователи", Value = "", Selected = !Model.GroupId.HasValue },
-				new SelectListItem { Text = "Мои группы", Value = "-1", Selected = Model.GroupId == -1 }
+				new SelectListItem { Text = "Все пользователи", Value = "-1", Selected = Model.GroupId == -1 },
+				new SelectListItem { Text = "Мои группы", Value = "", Selected = !Model.GroupId.HasValue }
 			};
 			groupsListItems.AddRange(
 				Model.Groups.Select(group => new SelectListItem { Text = group.Name, Value = group.Id.ToString(), Selected = group.Id == Model.GroupId })
