--- a/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
@@ -18,7 +18,7 @@
 			}
 			@if (Model.Message == "locked")
 			{
-				<p>Эта работа проверяется другим инструктором, выберите другую</p>
+				<p>Эта работа проверяется другим преподаваталем, выберите другую</p>
 			}
 			@if (Model.Message == "slide_checked")
 			{
@@ -34,7 +34,7 @@
 	@if (Model.Checkings.Count == 0)
 	{
 		<div class="alert alert-success">Поздравляем, очередь пуста! Работ для проверки нет</div>
-		<div class="text-muted">Здесь будут появляться ответы студентов на тесты, которые должны быть проверены инструктором вручную.</div>
+		<div class="text-muted">Здесь будут появляться ответы студентов на тесты, которые должны быть проверены преподавателем вручную.</div>
 	}
 
 	@foreach (var checkModel in Model.Checkings)
@@ -48,7 +48,7 @@
 				@if (check.IsLocked)
 				{
 					<p>
-						Проверяется инструктором <b>@check.LockedBy.VisibleName</b>,
+						Проверяется преподавателем <b>@check.LockedBy.VisibleName</b>,
 						заблокирована ещё на @{
 							var minutes = (int)(check.LockedUntil.Value - DateTime.Now).TotalMinutes;
 							@minutes.PluralizeInRussian(new RussianPluralizationOptions
