--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -38,11 +38,10 @@
 									}, i, QuizState.Total) 
 									: (dynamic)null
 							).ToArray(),
-							false,
-							true
+						false,
+						true
 						),
-						null
-					)
+						null)
 				</div>
 			</div>
 		</div>
