--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -48,6 +48,22 @@
 	border-bottom-color: #2a6496;
 }
 
+.inline-select {
+    border-width: 0;
+    padding: 0;
+    box-shadow: inset 0px 0px;
+    border-bottom: 1px dashed #2a6496;
+    margin: 0;
+    height: auto;
+    cursor: pointer;
+    color: #2a6496;
+    max-width: none;
+}
+
+.inline-select:focus {
+    outline: none;
+}
+
 .clipboard-link {
 	cursor: pointer;
 }
@@ -103,7 +119,6 @@
 .CodeMirror {
 	height: auto;
 	margin-bottom: 20px;
-	margin-top: 20px;
 	line-height: 1.3em;
 	font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 }
@@ -367,6 +382,11 @@
 	padding: 15px 18px;
 	color: #333;
 	font-size: 13pt;
+}
+
+.exercise-status {
+    margin-bottom: 0;
+    margin-top: 10px;
 }
 
 .no-display {
@@ -1266,4 +1286,13 @@ table.analytics__user-answers {
 
 .exercise__code__reviewed-fragment__selected {
 	background-color: #f7b7b7;
+}
+
+/* Exercise */
+.exercise__submissions-panel {
+    margin-bottom: 15px;
+}
+
+.exercise__submissions-panel .inline-select {
+	margin: 0 10px;
 }
