--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -29,7 +29,7 @@
 					@SlideHtml.Slide(new BlockRenderContext(course, slide, "/static/", 
 						slide.Blocks.Select(
 							(b, i) => b is ExerciseBlock 
-								? new ExerciseBlockData(course.Id, slide.Index) { RunSolutionUrl = "/" + slide.Index.ToString("000") + ".html?query=submit", DebugView = true } 
+								? new ExerciseBlockData(course.Id, (ExerciseSlide) slide) { RunSolutionUrl = "/" + slide.Index.ToString("000") + ".html?query=submit", DebugView = true, IsGuest = false } 
 								: b is AbstractQuestionBlock 
 									? new QuizBlockData(new QuizModel
 									{
