Correct save draft for new exercise version in local storage

--- a/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
+++ b/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
@@ -18,8 +18,7 @@
 
 		@Scripts.Render("~/main-js")
 		<script> getHints("@Model.CourseId", "@Model.SlideIndex", '@Model.ExerciseBlock.HintsMd.Count') </script>
-		ExerciseBlockData data = Model.Context.GetBlockData(Model.ExerciseBlock);
-		<script> refreshPreviousDraft('@(data.Solution != null)', '@Model.SlideId') </script>
+		<script> refreshPreviousDraft('@Model.SlideId') </script>
 	}
 </body>
 
