Show submissions panel just on receiving Accepted
Fix some bugs:
Disable «Previous version» for exercise submissions
Doesn't hide hints on version switching
Loading previous solution from localStorage doesn't work sometimes
Don't load hints on code review
Correcting version switching on code review

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -92,7 +92,9 @@
 			getHints("@Model.CourseId", "@Model.Slide.Index", '@slide.Exercise.HintsMd.Count')
 		</script>
 		<script>
-			refreshPreviousDraft('@Model.Slide.Id');
+			$(document).ready(function() {
+				refreshPreviousDraft('@Model.Slide.Id');
+			});
 		</script>
 	}
 
