--- a/src/uLearn.Web/Views/Exercise/Submission.cshtml
+++ b/src/uLearn.Web/Views/Exercise/Submission.cshtml
@@ -8,7 +8,8 @@
 	var manualCheckingId = Model.ManualChecking != null ? (int?)Model.ManualChecking.Id : null;
 }
 
-<div class="exercise__submission" data-version-update-url="@Url.Action("Submission", new { Model.CourseId, slideId = Model.Slide.Id, submissionId = "VERSION_ID", manualCheckingId = manualCheckingId, isLti = Model.IsLti})">
+<div class="exercise__submission"
+	 data-version-update-url="@Url.Action("Submission", new { Model.CourseId, slideId = Model.Slide.Id, submissionId = "VERSION_ID", manualCheckingId = manualCheckingId, isLti = Model.IsLti })">
 	@{
 		var currentSubmissionId = Model.SubmissionSelectedByUser != null ? (int?)Model.SubmissionSelectedByUser.Id : null;
 
@@ -29,18 +30,35 @@
 			classString = "code-reviewed";
 		}
 
-		var status = "";
-		if (Model.ReviewState == ExerciseReviewState.WaitingForReview)
+		if (Model.SubmissionSelectedByUser != null)
 		{
-			status = "Все тесты пройдены, код ожидает проверки преподавателем";
-		}
-		else if (Model.ReviewState == ExerciseReviewState.Reviewed)
-		{
-			status = "Все тесты пройдены, код проверен преподаваталем";
-		}
-		if (!string.IsNullOrEmpty(status) && Model.ManualChecking == null)
-		{
-			<p class="exercise-status">@status</p>
+			var status = "";
+			if (Model.ReviewState == ExerciseReviewState.WaitingForReview)
+			{
+				status = "Все тесты пройдены, код ожидает проверки преподавателем";
+			}
+			else if (Model.ReviewState == ExerciseReviewState.Reviewed)
+			{
+				var score = Model.SubmissionSelectedByUser.ManualCheckings.Max(c => c.Score);
+				status = string.Format("Все тесты пройдены, код проверен преподавателем ({0})", 
+					score.PluralizeInRussian(new RussianPluralizationOptions
+					{
+						One = "балл",
+						Two = "балла",
+						Five = "баллов",
+						Gender = Gender.Male,
+						hideNumberOne = false,
+						smallNumbersAreWords = false,
+					}));
+			}
+			else
+			{
+				status = "Все тесты пройдены, задача сдана";
+			}
+			if (!string.IsNullOrEmpty(status) && Model.ManualChecking == null)
+			{
+				<p class="exercise-status">@status</p>
+			}
 		}
 
 		if (Model.ReviewState == ExerciseReviewState.Reviewed || Model.ManualChecking != null)
@@ -81,15 +99,16 @@
 
 			@SlideHtml.RunErrors()
 
-			<div class="panel-group ctrl-group" id="hints-accordion">
-				<div id="hints-place"></div>
-			</div>
 			if (!Model.IsLti)
 			{
 				@YouWillLoseScoresDialog(Model)
 			}
 		}
 	}
+</div>
+
+<div class="panel-group ctrl-group" id="hints-accordion">
+	<div id="hints-place"></div>
 </div>
 
 @helper YouWillLoseScoresDialog(ExerciseBlockData data)
