Ignore submission if last submit by this user is not checked yet Sort groups in alphabetical order (after ownership by current user) Reverse checking queue sorting order: now new checkings are at the top Add .woff2 to static content filetypes
Fix bugs:
Internal server error on empty score on exercise manual checking
Group switching didn't work in exercise checking for already-checked queue
Don't show empty brackets in manual exercise checking for users not in any groups
Typo

--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -103,7 +103,7 @@
 					<div class="form-group">
 						<input id="name" name="name" type="text" class="form-control" placeholder="Название новой группы">
 						<p class="help-block">
-							Студенты увидят название группы, только если вы сами вышлите им ссылку для вступления
+							Студенты увидят название группы, только если вы сами вышлете им ссылку для вступления
 						</p>
 					</div>
 
