--- a/src/uLearn.Web/Views/Admin/_ManualCheckingQueueFilterForm.cshtml
+++ b/src/uLearn.Web/Views/Admin/_ManualCheckingQueueFilterForm.cshtml
@@ -4,6 +4,7 @@
 {
 	var formSubmit = "$('#manual-checking-queue-filter-form').submit();";
 	@Html.Hidden("courseId", Model.CourseId)
+	@Html.Hidden("done", Model.AlreadyChecked)
 
 	<div class="form-group">
 		@{
