--- a/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
@@ -42,7 +42,7 @@
 		var check = checkModel.CheckingQueueItem;
 		<div>
 			<div>
-				@check.User.VisibleName заполнил тест «@checkModel.ContextSlideTitle»
+				<b>@check.User.VisibleName</b> заполнил тест «@checkModel.ContextSlideTitle»
 			</div>
 			<div>
 				@if (check.IsLocked)
