--- a/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
@@ -13,30 +13,38 @@
 </div>
 
 <form method="POST" action="@Url.Action("ScoreExercise", "Exercise", new { recheck = Model.Checking.IsChecked })">
-	<input type="hidden" name="id" value="@Model.Checking.Id" />
-	<input type="hidden" name="errorUrl" value="@Url.RouteUrl("Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, CheckQueueItemId = Model.Checking.Id, Model.GroupId })&amp;error=" />
-	<input type="hidden" name="nextUrl" value="@Url.Action("ManualExerciseCheckingQueue", "Admin", new { Model.CourseId, Model.GroupId, done = Model.Checking.IsChecked })" />
+	<input type="hidden" name="id" value="@Model.Checking.Id"/>
+	<input type="hidden" name="errorUrl" value="@Url.RouteUrl("Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, CheckQueueItemId = Model.Checking.Id, Model.GroupId })&amp;error="/>
+	<input type="hidden" name="nextUrl" value="@Url.Action("ManualExerciseCheckingQueue", "Admin", new { Model.CourseId, Model.GroupId, done = Model.Checking.IsChecked })"/>
 
-	<h4>Оцените от 0 до @block.MaxReviewScore</h4>
-	<div>
-
-		<input type="number" class="form-control" min="0" max="@block.MaxReviewScore" name="exerciseScore"
-			   value="@(Model.Checking.IsChecked ? Model.Checking.Score.ToString() : "")" />
+	<h4>Оцените работу (максимальный балл @block.MaxReviewScore)</h4>
+	<div class="exercise__score">
+		<div class="btn-group" role="group">
+			@foreach (var scorePercent in new[] { 0, 25, 50, 75, 100 })
+			{
+				<button type="button" class="btn btn-default" data-value="@(block.MaxReviewScore * scorePercent / 100)">@scorePercent%</button>
+			}
+		</div>
+		<div class="ib">
+			<a href="#" class="exercise__other-score-link internal-page-link">Другая оценка</a>
+			<input type="number" class="form-control" style="display: none" min="0" max="@block.MaxReviewScore" name="exerciseScore" required="required"
+			       value="@(Model.Checking.IsChecked ? Model.Checking.Score.ToString() : "")"/>
+		</div>
 	</div>
 
 	<div class="checkbox checkbox-default">
-		<input data-val="true" id="prohibitFurtherReview" name="prohibitFurtherReview" type="checkbox" value="true" @(Model.Checking.IsChecked && !Model.Checking.ProhibitFurtherManualCheckings ? "" : "checked") />
+		<input data-val="true" id="prohibitFurtherReview" name="prohibitFurtherReview" type="checkbox" value="true" @(Model.Checking.IsChecked && !Model.Checking.ProhibitFurtherManualCheckings ? "" : "checked")/>
 		<label for="prohibitFurtherReview">
 			Не принимать больше код ревью у этого студента
 		</label>
 	</div>
 
-	<input type="submit" class="btn @(Model.Checking.IsChecked ? "btn-primary" : "btn-default")" value="Сохранить и вернуться" />
+	<input type="submit" class="btn @(Model.Checking.IsChecked ? "btn-primary" : "btn-default")" value="Сохранить и вернуться"/>
 
-	@if (! Model.Checking.IsChecked)
+	@if (!Model.Checking.IsChecked)
 	{
 		<input type="submit" class="btn btn-primary" value="Сохранить и перейти к следующему"
-			   data-url="@Url.Action("CheckNextExerciseForSlide", "Admin", new { Model.CourseId, slideId = Model.Slide.Id, Model.GroupId })"
-			   onclick="$('[name=nextUrl]').val($(this).data('url'))" />
+		       data-url="@Url.Action("CheckNextExerciseForSlide", "Admin", new { Model.CourseId, slideId = Model.Slide.Id, Model.GroupId })"
+		       onclick="$('[name=nextUrl]').val($(this).data('url'))"/>
 	}
 </form>
